// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs Snapshots tests should match snapshot 1`] = `
<div>
  <div>
    <div
      class="container desktop"
    >
      <div
        class="component m"
        role="tablist"
      >
        <button
          aria-selected="false"
          class="title"
          id="tab-1"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            class="content"
          >
            Таб 1
          </span>
          <span
            class="rightAddons"
          >
            addon
          </span>
        </button>
        <button
          aria-selected="true"
          class="title selected"
          id="tab-2"
          role="tab"
          tabindex="0"
          type="button"
        >
          <span
            class="content"
          >
            Таб 2
          </span>
        </button>
        <button
          aria-selected="false"
          class="title"
          id="tab-3"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            class="content"
          >
            Таб 3
          </span>
        </button>
        <button
          aria-selected="false"
          class="title"
          id="tab-4"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            class="content"
          >
            Таб 4
          </span>
        </button>
        <button
          aria-selected="false"
          class="title"
          id="tab-5"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            class="content"
          >
            Таб 5
          </span>
        </button>
        <div
          class="line"
        />
      </div>
    </div>
    <div
      class="component"
      role="tabpanel"
      tabindex="0"
    >
      Таб 2
    </div>
  </div>
</div>
`;

exports[`Tabs Snapshots tests should match snapshot 2`] = `
<div>
  <div>
    <div
      class="container"
    >
      <div
        class="component s"
        role="tablist"
      >
        <button
          aria-selected="false"
          class="component component component size-48 size-48 transparent transparent rounded transparent withRightAddons title"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span>
            Таб 1
          </span>
          <span
            class="addons"
          >
            addon
          </span>
        </button>
        <button
          aria-selected="true"
          class="component component component size-48 size-48 transparent transparent checked rounded transparent title"
          role="tab"
          tabindex="0"
          type="button"
        >
          <span>
            Таб 2
          </span>
        </button>
        <button
          aria-selected="false"
          class="component component component size-48 size-48 transparent transparent rounded transparent title"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span>
            Таб 3
          </span>
        </button>
        <button
          aria-selected="false"
          class="component component component size-48 size-48 transparent transparent rounded transparent title"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span>
            Таб 4
          </span>
        </button>
        <button
          aria-selected="false"
          class="component component component size-48 size-48 transparent transparent rounded transparent title"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span>
            Таб 5
          </span>
        </button>
      </div>
    </div>
    <div
      class="component"
      role="tabpanel"
      tabindex="0"
    >
      Таб 2
    </div>
  </div>
</div>
`;

exports[`Tabs Snapshots tests should match snapshot 3`] = `
<div>
  <div>
    <div
      class="scrollableContainerWrapper"
    >
      <div
        class="container"
      >
        <div
          class=""
          role="tablist"
        >
          <button
            aria-selected="false"
            class=""
            id="tab-1"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <span
              class=""
            >
              Таб 1
            </span>
            <span
              class=""
            >
              addon
            </span>
          </button>
          <button
            aria-selected="true"
            class=""
            id="tab-2"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class=""
            >
              Таб 2
            </span>
          </button>
          <button
            aria-selected="false"
            class=""
            id="tab-3"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <span
              class=""
            >
              Таб 3
            </span>
          </button>
          <button
            aria-selected="false"
            class=""
            id="tab-4"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <span
              class=""
            >
              Таб 4
            </span>
          </button>
          <button
            aria-selected="false"
            class=""
            id="tab-5"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <span
              class=""
            >
              Таб 5
            </span>
          </button>
          <div />
        </div>
      </div>
    </div>
    <div
      class="component"
      role="tabpanel"
      tabindex="0"
    >
      Таб 2
    </div>
  </div>
</div>
`;

exports[`Tabs Snapshots tests should match snapshot 4`] = `
<div>
  <div>
    <div
      class="scrollableContainerWrapper"
    >
      <div
        class="container"
      >
        <div
          class=""
          role="tablist"
        >
          <button
            aria-selected="false"
            class="component component component size-40 size-40 transparent transparent rounded transparent withRightAddons"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <span>
              Таб 1
            </span>
            <span
              class="addons"
            >
              addon
            </span>
          </button>
          <button
            aria-selected="true"
            class="component component component size-40 size-40 transparent transparent checked rounded transparent"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span>
              Таб 2
            </span>
          </button>
          <button
            aria-selected="false"
            class="component component component size-40 size-40 transparent transparent rounded transparent"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <span>
              Таб 3
            </span>
          </button>
          <button
            aria-selected="false"
            class="component component component size-40 size-40 transparent transparent rounded transparent"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <span>
              Таб 4
            </span>
          </button>
          <button
            aria-selected="false"
            class="component component component size-40 size-40 transparent transparent rounded transparent"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <span>
              Таб 5
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="component"
      role="tabpanel"
      tabindex="0"
    >
      Таб 2
    </div>
  </div>
</div>
`;

exports[`Tabs Snapshots tests should match snapshot 5`] = `
<div>
  <div>
    <div
      class="container desktop"
    >
      <div
        class="component m"
        role="tablist"
      >
        <button
          aria-selected="false"
          class="title"
          id="tab-1"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            class="content"
          >
            Таб 1
          </span>
          <span
            class="rightAddons"
          >
            addon
          </span>
        </button>
        <button
          aria-selected="true"
          class="title selected"
          id="tab-2"
          role="tab"
          tabindex="0"
          type="button"
        >
          <span
            class="content"
          >
            Таб 2
          </span>
        </button>
        <button
          aria-selected="false"
          class="title"
          id="tab-3"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            class="content"
          >
            Таб 3
          </span>
        </button>
        <button
          aria-selected="false"
          class="title"
          id="tab-4"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            class="content"
          >
            Таб 4
          </span>
        </button>
        <button
          aria-selected="false"
          class="title"
          id="tab-5"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            class="content"
          >
            Таб 5
          </span>
        </button>
        <div
          class="line"
        />
      </div>
    </div>
    <div
      class="component"
      role="tabpanel"
      tabindex="0"
    >
      Таб 2
    </div>
  </div>
</div>
`;

exports[`Tabs Snapshots tests should match snapshot 6`] = `
<div>
  <div>
    <div
      class="container"
    >
      <div
        class="component s"
        role="tablist"
      >
        <button
          aria-selected="false"
          class="component component component size-48 size-48 transparent transparent rounded transparent withRightAddons title"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span>
            Таб 1
          </span>
          <span
            class="addons"
          >
            addon
          </span>
        </button>
        <button
          aria-selected="true"
          class="component component component size-48 size-48 transparent transparent checked rounded transparent title"
          role="tab"
          tabindex="0"
          type="button"
        >
          <span>
            Таб 2
          </span>
        </button>
        <button
          aria-selected="false"
          class="component component component size-48 size-48 transparent transparent rounded transparent title"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span>
            Таб 3
          </span>
        </button>
        <button
          aria-selected="false"
          class="component component component size-48 size-48 transparent transparent rounded transparent title"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span>
            Таб 4
          </span>
        </button>
        <button
          aria-selected="false"
          class="component component component size-48 size-48 transparent transparent rounded transparent title"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span>
            Таб 5
          </span>
        </button>
      </div>
    </div>
    <div
      class="component"
      role="tabpanel"
      tabindex="0"
    >
      Таб 2
    </div>
  </div>
</div>
`;

exports[`Tabs should match snapshot with icon as title 1`] = `
<div>
  <div>
    <div
      class="container desktop"
    >
      <div
        class="component m"
        role="tablist"
      >
        <button
          aria-selected="false"
          class="title"
          id="tab-1"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            class="content"
          >
            <svg
              fill="currentColor"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M12.707 2.293a1 1 0 00-1.414 0L8.21 5.376a1 1 0 000 1.415l3.083 3.083a1 1 0 001.415 0l3.083-3.083a1 1 0 000-1.414l-3.084-3.084zm4.5 5.915a1 1 0 011.415 0l3.085 3.085a1 1 0 010 1.415l-3.084 3.084a1 1 0 01-1.415 0l-3.085-3.085a1 1 0 010-1.415l3.084-3.084zm-4.497 5.916a1 1 0 00-1.415 0L8.209 17.21a1 1 0 000 1.415l3.084 3.083a1 1 0 001.414 0l3.086-3.085a1 1 0 000-1.415l-3.084-3.083zM5.377 8.209a1 1 0 011.415 0l3.086 3.085a1 1 0 010 1.415l-3.085 3.084a1 1 0 01-1.414 0l-3.086-3.086a1 1 0 010-1.414l3.084-3.084z"
              />
            </svg>
          </span>
        </button>
        <button
          aria-selected="true"
          class="title selected"
          id="tab-2"
          role="tab"
          tabindex="0"
          type="button"
        >
          <span
            class="content"
          >
            <svg
              fill="currentColor"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M12.707 2.293a1 1 0 00-1.414 0L8.21 5.376a1 1 0 000 1.415l3.083 3.083a1 1 0 001.415 0l3.083-3.083a1 1 0 000-1.414l-3.084-3.084zm4.5 5.915a1 1 0 011.415 0l3.085 3.085a1 1 0 010 1.415l-3.084 3.084a1 1 0 01-1.415 0l-3.085-3.085a1 1 0 010-1.415l3.084-3.084zm-4.497 5.916a1 1 0 00-1.415 0L8.209 17.21a1 1 0 000 1.415l3.084 3.083a1 1 0 001.414 0l3.086-3.085a1 1 0 000-1.415l-3.084-3.083zM5.377 8.209a1 1 0 011.415 0l3.086 3.085a1 1 0 010 1.415l-3.085 3.084a1 1 0 01-1.414 0l-3.086-3.086a1 1 0 010-1.414l3.084-3.084z"
              />
            </svg>
          </span>
        </button>
        <div
          class="line"
        />
      </div>
    </div>
  </div>
</div>
`;
